<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="register">Register</string>
    <string name="login2">Login</string>
    <string name="username">username_hint\n</string>
    <string name="hello_admin">Hello Admin!</string>
    <string name="hey_there">Hey there! What do you want to do?</string>
    <string name="insert_product">Insert Product</string>
    <string name="view_product_nupdate_product_ndeleteproduct">View Product\nUpdate product\nDeleteProduct</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="select_image">Select Image</string>
    <string name="insert_product2">Insert Product</string>
    <string name="insert_product1">Insert Product</string>
    <string name="to_update_search_a_product_by_name">To update search a product by name</string>
    <string name="product_name1">Product Name</string>
    <string name="product_price1">Product Price</string>
    <string name="product_quantity1">Product Quantity</string>
    <string name="product_id">Product ID</string>
    <string name="select_image1">Select Image</string>
    <string name="search">Search</string>
    <string name="update_product">Update Product</string>
    <string name="to_delete_search_a_product_by_name">To Delete search a product by name</string>
    <string name="product_name2">Product Name</string>
    <string name="product_price2">Product Price</string>
    <string name="product_quantity2">Product Quantity</string>
    <string name="product_id1">Product ID</string>
    <string name="search1">Search</string>
    <string name="delete_product">Delete Product</string>
    <string name="login1">Login</string>
    <string name="register1">Register</string>
    <string name="phone">phone</string>
    <string name="confirm_password">confirm password</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="sign_up">Sign Up</string>
    <string name="username1">username</string>
    <string name="todo">TODO</string>
</resources>