<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginBottom="16dp"
        android:text="@string/hey_there"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_insert_product"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:layout_marginBottom="16dp"
        android:text="@string/insert_product" />

    <Button
        android:id="@+id/btn_view_product"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/view_product_nupdate_product_ndeleteproduct" />


</LinearLayout>